--- a/templates/form.html
+++ b/templates/form.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,11 +6,14 @@
 <body>
     <h1>Frage Gemini etwas</h1>
     <form method="post" enctype="multipart/form-data">
-        <label for="prompt">Prompt:</label>
+        <label for="prompt">Prompt (Pflichtfeld):</label>
         <input type="text" id="prompt" name="prompt" required><br><br>
 
         <label for="file">Bild hochladen (optional):</label>
         <input type="file" id="file" name="file"><br><br>
+
+        <label for="url">Oder Webseiten-URL (optional):</label>
+        <input type="url" id="url" name="url"><br><br>
 
         <input type="submit" value="Absenden">
     </form>
