--- a/static/style.css
+++ b/static/style.css
@@ -69,15 +69,9 @@ button:hover:not(:disabled) {
     filter: brightness(1.1);
 }
 
-pre {
-    background: #eef1f5;
-    padding: 1em;
-    border-radius: 8px;
-    white-space: pre-wrap;
-    font-size: 0.95em;
-    overflow-x: auto;
-    margin-top: 2em;
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+.response-text p {
+    margin-bottom: 1em;
+    line-height: 1.5;
 }
 
 .form-submit {
